--- a/Watersheds/Watershed Delineator.Rmd
+++ b/Watersheds/Watershed Delineator.Rmd
@@ -18,7 +18,7 @@ library(openxlsx)
 
 # **2 - IMPORT DATA**
 #### Several import options exist depending on the format, size, and variables contained in your dataset.
-#### Use *ONE* of the following data import options below (GIS shapefile, Excel, or CSV)
+#### Use *ONE* of the following data import options below (GIS shapefile, Excel, CSV, or DEQ Stations Table)
 #### If drawing a single watershed boundary, use <https://streamstats.usgs.gov/ss/>.
 
 ## PLACEHOLDERS - First, specify inputs, outputs, and directories.
@@ -26,16 +26,19 @@ library(openxlsx)
 analyst <- "First Last" #enter your name in quotes
 input_dir <- "//deqlab1/Biomon/FillInFilePath/FileName" #specify folder containing input file(s)
 output_dir <-"//deqlab1/Biomon/FillInFilePath/FileName" #specify folder where outputs should be saved
-#file_input <- "FillInFileName.ext" #enter file name and extension (.shp, .xlsx, or .csv)
+file_input <- "FillInFileName.ext" #enter file name and extension (.shp, .xlsx, or .csv)
+subset_file <- tempfile(fileext = ".gpkg") #required - don't edit
 ```
 
 ## FOR REALSIES - First, specify inputs, outputs, and directories.
 ```{r}
-analyst <- "Dr Stations" #enter your name in quotes
+analyst <- "Stations Despot M.D." #enter your name
 input_dir <- "C:/Users/athomps/OneDrive - Oregon/Desktop/New folder" #specify folder containing input file(s)
 output_dir <-"C:/Users/athomps/OneDrive - Oregon/Desktop/New folder" #specify folder where outputs should be saved
 file_input <- "Willy.shp" #enter file name and extension (.shp, .xlsx, or .csv)
+subset_file <- tempfile(fileext = ".gpkg") #required - don't edit
 ```
+
 
 ## Import Option *A* - GIS Shapefile (.shp)
 #### Choose this option if data are already in GIS and you don't need station COMIDs.
@@ -45,33 +48,17 @@ file_input <- "Willy.shp" #enter file name and extension (.shp, .xlsx, or .csv)
 sta <- st_read(paste0(input_dir, "/", file_input))
 ```
 
-
-#### Testing putting this up sooner.
+#### Put latitude and longitude into their own columns.
 ```{r}
-generatecomids <- function(long, lat, refsystem) {
- points <- st_sfc(st_point(c(long, lat), crs = refsystem)) #draws on CRS entered in Excel file
- getcomid <- discover_nhdplus_id(points)
- return(getcomid)
-}
-```
-
-
-
-#### *Required*: Look up the coordinate reference system (CRS) for your set of stations (see last line of resulting code).
-```{r}
-st_crs(sta)
-```
-
-#### Enter the CRS below.
-```{r}
-crs <- "4269"
-
 sta<-sta %>%
   dplyr::mutate(lon = sf::st_coordinates(.)[,1],
-                lat = sf::st_coordinates(.)[,2]) %>%
-  mutate(comid2 = generatecomids(long, lat, refsystem = crs)) #put lat/longs into their own columns & generate comids based on lat/longs
+                lat = sf::st_coordinates(.)[,2])
 ```
 
+#### Generate COMIDs based on lat/long values in GIS file. <-- DOESN'T WORK. NO LONGER NEEDED??
+```{r}
+#mutate(comid2 = generatecomids(long, lat, refsystem = crs)) 
+```
 
 ## Import Option *B* - Excel (.xlsx)
 #### Choose this option if data are already in Excel (.xlsx) and you're missing COMIDs.
@@ -88,12 +75,39 @@ file_input <- "Willy.csv" #enter input file name
 latlonginput <- read.xlsx(file=paste0(input_dir, "/", file_input))
 ```
 
-
-# **3 - RUN FUNCTION TO DELINEATE WATERSHEDS**
+## Import Option *D* - DEQ Stations Table
+#### Note: Requires ODBC connection to SQL database.
+#### Good option for when stations have already been created and ideally have COMIDs.
 ```{r}
-subset_file <- tempfile(fileext = ".gpkg") #required - don't edit
+stations <- query_stations()
+```
 
-#--- Start of function ---#
+
+# **3 - DEFINE COORDINATE REFERENCE SYSTEM (CRS)**
+#### LOOK UP CRS FOR YOUR SET OF STATIONS (REFER TO LAST LINE OF OUTPUT)
+```{r}
+st_crs(sta)
+```
+
+#### Enter the resulting 4-digit coordinate reference system below.
+```{r}
+crs <- "4269"
+```
+
+
+# **4 - RUN FUNCTION TO GENERATE COMIDS**
+```{r}
+generatecomids <- function(long, lat, refsystem) {
+ points <- st_sfc(st_point(c(long, lat), crs = refsystem)) #draws on CRS entered in Excel file
+ getcomid <- discover_nhdplus_id(points)
+ return(getcomid)
+}
+```
+
+
+# **5 - RUN FUNCTION TO DELINEATE WATERSHEDS**
+```{r}
+#~~~~~~~~~~start of function
 delineate_comid_watersheds <- function(comid, ofid2, random, shp_file){
 
 #Get flowline -- Travis: If this is needed later on in process also, we can figure that out
@@ -127,34 +141,34 @@ catchment2  <- st_sf(catchment)|>
 #Write to shp file. Create new file if it doesn't exists, append if it does
 st_write(catchment2, shp_file, append = TRUE)
 
-}
-#--- End of function ---#
+} #~~~~~~~~~~end of function
 ```
 
 
-**4 - *STOP* - REVIEW AUTO-GENERATED COMIDS IN GIS**
+**6 - *STOP* - REVIEW AUTO-GENERATED COMIDS IN GIS**
 ## Write code to override any changes. Skip this section if all COMIDs are correct.
 ```{r}
 #input$comid[input$comid=="123456"] <- "456789"
 ```
 
 
-**5 - WRITE NEWLY DELINEATED WATERSHEDS TO GIS OUTPUT FILE**
+**7 - WRITE NEWLY DELINEATED WATERSHEDS TO GIS OUTPUT FILE**
 #### This step....
 ```{r}
-comid <- data.frame(comid = sta$ComID)
+#comid <- data.frame(comid = sta$ComID)
 
 #version 1
-purrr::map(comids, ~ delineate_comid_watersheds(.,shp_file = paste0(input_dir, "/", file_input))
+#purrr::map(comid, ~ delineate_comid_watersheds(.,shp_file = paste0(input_dir, "/", file_input)))
+purrr::map(sta$ComID, ~ delineate_comid_watersheds(.,shp_file = paste0(input_dir, "/", file_input)))
 
 #version 2
-purrr::pmap(sta, ~delineate_comid_watersheds(comid = {..1}, random = {..2}, ofid2 = {..3}, shp_file =  paste0(input_dir, "/", file_input)))
+#purrr::pmap(sta, ~delineate_comid_watersheds(comid = {..1}, random = {..2}, ofid2 = {..3}, shp_file =  paste0(input_dir, "/", file_input)))
 
 ### BOTH GIVE ERRORS ABOUT NULL OR NON-EMPTY COMIDS
 ```
 
 
-**6 - CALCULATE WATERSHED AREAS AND APPEND TO GIS SHAPEFILE**
+**8 - CALCULATE WATERSHED AREAS AND APPEND TO GIS SHAPEFILE**
 #### Note: Area is calculated in sq meters. Convert manually if needed.
 ```{r}
 catchment2 <- st_sf(catchment)|> 
