--- a/Watersheds/Watershed Delineator.Rmd
+++ b/Watersheds/Watershed Delineator.Rmd
@@ -5,9 +5,12 @@ date: "2025-10-14"
 output: html_document
 ---
 
-![](Watersheds/Images/Watershed%20Delineator%20title%20image.png){width="727"}
+![](images/clipboard-1508299075.png)
+
+#### **PREFACE:** This script batch delineates upstream watershed boundaries for a given set of stations/originating COMIDs.
 
 # **1 - LOAD PACKAGES**
+
 ```{r}
 library(nhdplusTools)
 library(sf)
@@ -17,11 +20,15 @@ library(openxlsx)
 ```
 
 # **2 - IMPORT DATA**
+
 #### Several import options exist depending on the format, size, and variables contained in your dataset.
+
 #### Use *ONE* of the following data import options below (GIS shapefile, Excel, CSV, or DEQ Stations Table)
+
 #### If drawing a single watershed boundary, use <https://streamstats.usgs.gov/ss/>.
 
 ## PLACEHOLDERS - First, specify inputs, outputs, and directories.
+
 ```{r}
 analyst <- "First Last" #enter your name in quotes
 input_dir <- "//deqlab1/Biomon/FillInFilePath/FileName" #specify folder containing input file(s)
@@ -31,6 +38,7 @@ subset_file <- tempfile(fileext = ".gpkg") #required - don't edit
 ```
 
 ## FOR REALSIES - First, specify inputs, outputs, and directories.
+
 ```{r}
 analyst <- "Stations Despot M.D." #enter your name
 input_dir <- "C:/Users/athomps/OneDrive - Oregon/Desktop/New folder" #specify folder containing input file(s)
@@ -39,73 +47,78 @@ file_input <- "Willy.shp" #enter file name and extension (.shp, .xlsx, or .csv)
 subset_file <- tempfile(fileext = ".gpkg") #required - don't edit
 ```
 
-
 ## Import Option *A* - GIS Shapefile (.shp)
-#### Choose this option if data are already in GIS and you don't need station COMIDs.
 
-#### Read GIS shapefile.
-```{r}
-sta <- st_read(paste0(input_dir, "/", file_input))
-```
+#### Choose this option if stations are already in GIS and you don't need COMIDs.
 
-#### Put latitude and longitude into their own columns.
 ```{r}
+sta <- st_read(paste0(input_dir, "/", file_input)) #read GIS shapefile
+
 sta<-sta %>%
   dplyr::mutate(lon = sf::st_coordinates(.)[,1],
-                lat = sf::st_coordinates(.)[,2])
+                lat = sf::st_coordinates(.)[,2]) #put latitude and longitude into their own columns
 ```
 
-#### Generate COMIDs based on lat/long values in GIS file. <-- DOESN'T WORK. NO LONGER NEEDED??
+#### Generate COMIDs based on lat/long values in GIS file. \<-- DOESN'T WORK. NO LONGER NEEDED??
+
 ```{r}
 #mutate(comid2 = generatecomids(long, lat, refsystem = crs)) 
 ```
 
 ## Import Option *B* - Excel (.xlsx)
+
 #### Choose this option if data are already in Excel (.xlsx) and you're missing COMIDs.
-#### Before proceeding, manually enter the coordinate reference system numbers in a new "CRS" column in the upload file.
+
 ```{r}
 file_input <- "Willy.xlsx" #enter input file name
 latlonginput <- read.xlsx(file=paste0(input_dir, "/", file_input))
 ```
 
 ## Import Option *C* - Excel (.csv)
+
 #### Choose this option if data are already in Excel (.csv) and you're missing COMIDs.
+
 ```{r}
 file_input <- "Willy.csv" #enter input file name
 latlonginput <- read.xlsx(file=paste0(input_dir, "/", file_input))
 ```
 
 ## Import Option *D* - DEQ Stations Table
+
 #### Note: Requires ODBC connection to SQL database.
+
 #### Good option for when stations have already been created and ideally have COMIDs.
+
 ```{r}
 stations <- query_stations()
 ```
 
-
 # **3 - DEFINE COORDINATE REFERENCE SYSTEM (CRS)**
-#### LOOK UP CRS FOR YOUR SET OF STATIONS (REFER TO LAST LINE OF OUTPUT)
+
+#### Look up CRS for your set of stations (refer to last line of output)
+
 ```{r}
 st_crs(sta)
 ```
 
-#### Enter the resulting 4-digit coordinate reference system below.
+#### Enter the resulting 4-digit coordinate reference system below (in quotes).
+
 ```{r}
 crs <- "4269"
 ```
 
+# **4 - GENERATE COMIDS**
 
-# **4 - RUN FUNCTION TO GENERATE COMIDS**
 ```{r}
 generatecomids <- function(long, lat, refsystem) {
- points <- st_sfc(st_point(c(long, lat), crs = refsystem)) #draws on CRS entered in Excel file
+ points <- st_sfc(st_point(c(long, lat), crs = refsystem)) #draws on CRS entered in Excel file (????)
  getcomid <- discover_nhdplus_id(points)
  return(getcomid)
 }
 ```
 
+# **5 - DELINEATE WATERSHEDS**
 
-# **5 - RUN FUNCTION TO DELINEATE WATERSHEDS**
 ```{r}
 #~~~~~~~~~~start of function
 delineate_comid_watersheds <- function(comid, ofid2, random, shp_file){
@@ -144,16 +157,14 @@ st_write(catchment2, shp_file, append = TRUE)
 } #~~~~~~~~~~end of function
 ```
 
+**6 - *STOP* - REVIEW AUTO-GENERATED COMIDS IN GIS** \## Write code to override any changes. Skip this section if all COMIDs are correct.
 
-**6 - *STOP* - REVIEW AUTO-GENERATED COMIDS IN GIS**
-## Write code to override any changes. Skip this section if all COMIDs are correct.
 ```{r}
 #input$comid[input$comid=="123456"] <- "456789"
 ```
 
+**7 - WRITE NEWLY DELINEATED WATERSHEDS TO GIS OUTPUT FILE** \#### This step....
 
-**7 - WRITE NEWLY DELINEATED WATERSHEDS TO GIS OUTPUT FILE**
-#### This step....
 ```{r}
 #comid <- data.frame(comid = sta$ComID)
 
@@ -167,9 +178,8 @@ purrr::map(sta$ComID, ~ delineate_comid_watersheds(.,shp_file = paste0(input_dir
 ### BOTH GIVE ERRORS ABOUT NULL OR NON-EMPTY COMIDS
 ```
 
+**8 - CALCULATE WATERSHED AREAS AND APPEND TO GIS SHAPEFILE** \#### Note: Area is calculated in sq meters. Convert manually if needed.
 
-**8 - CALCULATE WATERSHED AREAS AND APPEND TO GIS SHAPEFILE**
-#### Note: Area is calculated in sq meters. Convert manually if needed.
 ```{r}
 catchment2 <- st_sf(catchment)|> 
   mutate(orig_comid = comid) 
@@ -177,4 +187,3 @@ catchment2 <- st_sf(catchment)|>
 catchment2 <- catchment2|> 
   mutate(area = st_area(catchment2))
 ```
-
