--- a/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
+++ b/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
@@ -19,42 +19,24 @@ library(writexl)
 
 # **2 - IMPORT DATA**
 
-## STATIONS - *FROM DEQ STATIONS DATABASE*
-
-#### Pull all sites with a reference status designation
+## STATIONS/TSS - *FROM WATER CHEMISTRY BENCHMARKS SCRIPT*
 
 ```{r}
-stations <- query_stations()
-ref_stations <- stations %>% 
-  filter(ReferenceSite %in% c("REFERENCE" , "MODERATELY DISTURBED", "MOST DISTURBED")) %>% 
-  select(MLocID, COMID, ReferenceSite, OrgID)
-rm(stations)
+#placeholder for pulling in all TSS data
+
+comids <- read_excel("C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! - General/Env't Stats Class Project 2025/TSS_10282025.xlsx") #output file from ref benchmarks script used to pull StreamCat metrics
+comids <- comids %>% select(COMID) %>% distinct #select unique COMIDs
+
+comids <- subset(comids,comids$COMID != "-99999") #don't include sites on high res sans COMID
 ```
 
-## WATER CHEMISTRY DATA - *FROM AWQMS*
-
-#### Total suspended solids (TSS) data for sites with a reference status designation
-
-```{r}
-tss <- AWQMS_Data(MLocID = ref_stations$MLocID, Char_Name = 'Total suspended solids')
-```
-
-#### Merge AWQMS and Stations data into single dataframe
-
-```{r}
-tss.all <- inner_join(tss, ref_stations, by = "MLocID")
-```
-
-## WATERSHED METRICS - *FROM EPA STREAMCAT*
+## WATERSHED PREDICTOR VARIABLES - *FROM EPA STREAMCAT*
 
 #### Can search for predictors of interest here: <https://www.epa.gov/national-aquatic-resource-surveys/streamcat-metrics-and-definitions>
 
-# do correlation analysis for streamcat predictors - which covary with each other? Get all predictors for watersheds. 
-# need to query catchment data when we "Used closest COMID"
+#### Make table of StreamCat metric metadata and clean up in Excel
 
 ```{r}
-comids <- read_excel("TSS_COMIDs.xlsx") #output file from ref benchmarks script
-
 partable <- StreamCatTools::sc_get_metric_names() #supposedly best source for query-able metric names
 scpar <- StreamCatTools::sc_get_params(param = 'metric_names') #name mismatch error message suggests consulting this list
 write_xlsx(partable, path = "C:/Users/athomps/OneDrive - Oregon/Desktop/partable.xlsx") #saved as intermediate file, which moved to Teams and got cleaned up
@@ -63,15 +45,19 @@ kitty <- read_excel("C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! - Gener
 
 keepers <- subset(kitty, kitty$`Use?`=='y') #keep only parameters of interest
 mets <- keepers[,5] #make data frame of keeper metric names capable of querying data
+```
 
+#### Run function and pull StreamCat data by subcategory
 
-#test each metric to ensure names match
-test <- StreamCatTools::sc_get_data(comid = '23648454', metric = 'wwtpminordens', showAreaSqKm = TRUE, aoi='ws, cat')
+```{r}
+#use this to test individual metrics (e.g., to ensure names match)
+#test <- StreamCatTools::sc_get_data(comid = '23648454', metric = 'wwtpminordens', showAreaSqKm = TRUE, aoi='ws, cat')
 
 # full data pulls use aoi='catchment,watershed,other')) 
 # generating Spearman ranks use aoi='watershed')) 
 
-#travis function - start +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+# FUNCTION - START +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 get_streamcat <- function(comids, type = c("Agriculture","Climate","Dams","Flow","IWI","Land Cover","Lithology","Mining_Toxics","Roads",
                                            "Urban","Wildfire")){
 type <- match.arg(type)
@@ -180,9 +166,9 @@ if(type == "Wildfire"){
 names(streamcat) <- base::toupper(names(streamcat))
 return(streamcat)
 }
-#end of function      +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# FUNCTION - END  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-# SUBSET BY CATEGORY/TYPE
+# PULL DATA BY SUBCATEGORY/TYPE
 ag <- get_streamcat(comids = comids, type = "Agriculture")
 clim <- get_streamcat(comids = comids, type = "Climate")
 dams <- get_streamcat(comids = comids, type = "Dams")
@@ -204,9 +190,14 @@ meow <- meow %>% reduce(full_join, by='COMID')
 # GROUP PREDICTORS BY HUMAN VS NATURAL
 human <- subset(kitty, kitty$Category == "Anthropogenic" & kitty$`Use?` == 'y')
 natural <- subset(kitty, kitty$Category == "Natural" & kitty$`Use?` == 'y')
-#then use the above two data frames to filter out streamcat for human vs natural
+human.mets <- human[,6] #just the human related metric names
+natural.mets <- natural[,6] #just the natural metric names
+#then use these to filter out streamcat for human vs natural
+```
 
-# CORRELATION MATRIX
+#### Make Spearman correlation matrix to identify covaried parameters
+
+```{r}
 spear <- cor(meow, method = "spearman")
 spear <- as.data.frame(spear)
 spear.rows <- tibble::rownames_to_column(spear)
@@ -214,158 +205,14 @@ spear.rows <- tibble::rownames_to_column(spear)
 write_xlsx(spear.rows, path = "C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! - General/Env't Stats Class Project 2025/StreamCat/Spearmans.xlsx")
 ```
 
-
 ## EXPLORE CO-VARIED PARAMETERS AND SELECT WHICH WE WANT TO RETAIN FOR MODELLING PURPOSES
 
 ## PULL STREAMCAT AGAIN BUT ONLY FOR PARAMETERS OF INTEREST
+
 ```{r}
 
 ```
 
+# do correlation analysis for streamcat predictors - which covary with each other? Get all predictors for watersheds.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-```{r}
-comids <- read_excel("TSS_COMIDs.xlsx") #output file from ref benchmarks script
-
-scaoi <-StreamCatTools::sc_get_params(param = 'aoi') #make list of all sc aois
-print(paste0('Area of interest available parameters are: ', paste(scaoi, collapse = ', ')))
-
-scpar <- StreamCatTools::sc_get_params(param = 'metric_names') #make list of all sc metrics
-print(paste0('Parameters names are: ', paste(scpar, collapse = ', ')))
-
-
-
-comids_split <- split(comids2, ceiling(seq_along(comids2)/750)) #this isn't really splitting them into chunks of 750 ???
-metrics_split <- split(scpar, ceiling(seq_along(scpar)/750)) #seems to work, as now have two lists, first one cutting off at 750
-
-streamcat <- purrr::map_dfr(comids_split, ~StreamCatTools::sc_get_data(comid = .,
-                                                                           metric = "all",
-                                                                           showAreaSqKm = TRUE,
-                                                                           aoi='catchment,watershed,other'))
-
-
-# single comid, all metrics, one aoi (can't handle all metrics and all aois)
-test <- StreamCatTools::sc_get_data(comid = '23648454', metric = 'n_cf_1990', showAreaSqKm = TRUE, aoi='ws, cat')
-
-
-
-comids <- read_excel("TSS_COMIDs.xlsx") #output file from ref benchmarks script
-scaoi <-StreamCatTools::sc_get_params(param = 'aoi') #make list of all sc aois
-
-
-myfunction <- function(comids, scaoi) {
-
-
-streamcat <- purrr::map_dfr(comids, scaoi, ~StreamCatTools::sc_get_data(comid = comids,
-                                                                          metric = 'all',
-                                                                          showAreaSqKm = TRUE,
-                                                                          aoi = scaoi))
-return(streamcat)
-}
-
-doit <- myfunction(comids = comids, scaoi = scaoi)
-
-
-#````````````````````````for loops
-
-for (i in comids) {
-ws <- StreamCatTools::sc_get_data(i, metric = 'all', showAreaSqKm = TRUE, aoi='watershed')
-}
-
-for (i in comids) {
-ca <- StreamCatTools::sc_get_data(i, metric = 'all', showAreaSqKm = TRUE, aoi='catchment')
-}
-
-for (i in comids) {
-ot <- StreamCatTools::sc_get_data(i, metric = 'all', showAreaSqKm = TRUE, aoi='other') #times out for 'other' aoi
-}
-
-allmets <- left_join(ws, ca, by = "comid") #join catchment and watershed
-
-
-core <- cor(allmets, method = "spearman")
-corews <- cor(ws, method = "spearman")
-
-look <- which(abs(corews) > .80 & abs(corews) < 1, arr.ind = T)
-
-
-
-#export full correl table into excel. conditional format >0.8, sort out.
-#lots of temp data highly correlated, decide which metric to use
-look <- corews[corews < abs(0.8) | corews == 1] <- ""
-look <- filter(core, array > abs(0.8))
-look <- filter_all(any_vars(abs(.) > 0.8))
-
-look <- core %>% 
-  select_if(is.numeric) %>% 
-  cor() %>% 
-  round(digits = 2) %>% 
-  as.data.frame() %>%
-  select_if(funs(all(abs(.) > 0.8)))
-
-```
-
-```{r}
-
-usablemetrics <- subset full list of metrics by USE ==  "YES"
-
-if(type == "immutable area"){
-    
-
-
-    streamcat <- purrr::map_dfr(comids_split, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'TMAX8110,BFI,ELEV,clay,precip8110,mwst2008,mwst2009,mwst2013,mwst2014', 
-                                                                           showAreaSqKm = TRUE,
-                                                                           aoi='catchment,watershed,other'))
-    
-  }
-  
-  if(type == "disturbance wildfire"){
-```
-
-
-
-
-
-```{r}
-#Get list of COMIDs 
-comids <- unique(tss.all$COMID)
-
-#Remove blanks
-comids <- comids[!is.na(comids)]
-
-#Run function
-get_streamcat <- function(comids){
-  
-comid_narm <- na.omit(comids)
-comids_split <- split(comid_narm, ceiling(seq_along(comids)/650))
-
-streamcat <- purrr::map_dfr(comids_split, ~StreamCatTools::sc_get_data(comid = .,
-                                                                           metric = 'pctcrop2019',
-                                                                           showAreaSqKm = TRUE,
-                                                                           aoi='catchment,watershed,other'))
-
-streamcat <- get_streamcat(comids = comids)
-
-names(streamcat) <- base::toupper(names(streamcat))
-
-return(streamcat)
-}
-
-streamcat <- get_streamcat(comids = comids)
-```
-
-
+# need to query catchment data when we "Used closest COMID"
